# blender-addon-template

./: .gitignore  .python-version  README.md  pyproject.toml
my_addon/: __init__.py  auto_load.py  panel_mypanel.py
scripts/: build_addon.sh
