[project]
name = "my_addon"
dynamic = ["version"]
description = 'Short description of my add-on'
readme = "README.md"
requires-python = "==3.12.*"
license = "GPL-2.0-or-later"
keywords = []
authors = [
  { name = "Author Name", email = "authorname@example.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/org/repo"
Issues = "https://github.com/org/repo/issues"
Source = "https://github.com/org/repo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "code"
path = "my_addon/__init__.py"
expression = "'.'.join([str(v) for v in bl_info['version']])"

[tool.rye]
managed = true
dev-dependencies = [
  "fake-bpy-module-4.1",

  # for blender.nvim:
  "pynvim",
  "debugpy", # Optional, for debugging

  # for blender_vscode
  # "flask",
  # "requests",
  # "debugpy",
]
